# documind

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pr-checks.yml
app/: main.py
app/api/routes/: documents.py  health.py  query.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: cache.py  embedder.py  llm.py  rag.py  vectorstore.py
docker/: Dockerfile  Dockerfile.dev
helm/documind/: Chart.yaml  values.yaml
helm/documind/templates/: _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-chromadb.yaml  deployment-ollama.yaml  hpa.yaml  ingress.yaml  service-api.yaml  servicemonitor.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  k3d-config.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  pvc.yaml  resource-quota.yaml  secret.yaml  service.yaml
monitoring/grafana/dashboards/: documind-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: documind.yml
scripts/: deploy.sh  setup.sh
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_config.py  test_llm.py  test_rag_ingest.py  test_schemas.py
